--- a/src/main/resources/templates/books/edit.html
+++ b/src/main/resources/templates/books/edit.html
@@ -13,10 +13,9 @@
                    placeholder="Enter title">
         </div>
         <div class="form-group">
-            <input type="hidden" th:field="*{id}">
-            <label class="col-md2" for="title">Title</label>
-            <input th:field="*{title}" type="text" class="col-md6 form-control form-control-sm" id="title"
-                   placeholder="Enter title">
+            <label class="col-md2" for="coverImage">Cover Image</label>
+            <input th:field="*{coverImage}" type="text" class="col-md6 form-control form-control-sm" id="coverImage"
+                   placeholder="Enter Url">
         </div>
         <div class="form-group">
             <label class="col-md2" for="author">Author</label>
