--- a/src/main/resources/templates/books/all.html
+++ b/src/main/resources/templates/books/all.html
@@ -5,34 +5,30 @@
 <header th:replace="fragments/header"></header>
 <section class="container">
     <h1 th:text="${title}"></h1>
-    <table class="table">
-        <thead>
-        <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Title</th>
-            <th scope="col">Author</th>
-            <th scope="col">Category</th>
-            <th scope="col">Edit</th>
-            <th scope="col">Delete</th>
-        </tr>
-        </thead>
+
         <tbody>
-        <tr th:each="book: ${books}">
-            <th scope="row" th:text="${book.id}"></th>
-            <td th:text="${book.title}"></td>
-            <td th:text="${book.author}"></td>
-            <td th:text="${book.category}"></td>
-            <td>
+        <div class="d-flex flex-row flex-sm-wrap justify-content-between align-items-center bd-highlight mb-3">
+
+        <div th:each="book: ${books}" class="card" style="width: 18rem;">
+            <img th:src="${book.coverImage}" class="card-img-top" alt="cover">
+            <div class="card-body">
+                <h5 th:text="${book.title}" class="card-title"></h5>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li th:text="${book.author}" class="list-group-item"></li>
+                <li th:text="${book.category}" class="list-group-item"></li>
+                <li th:text="${book.id}" class="list-group-item" style="display:none;"></li>
+            </ul>
+            <div class="card-body">
                 <a class="btn btn-success btn-sm" th:href="'/books/edit/'+${book.id}">Edit</a>
-            </td>
-            <td>
                 <a class="btn btn-danger btn-sm" th:href="'/books/delete/'+${book.id}">Delete</a>
-            </td>
-
-        </tr>
+            </div>
+            </div>
+        </div>
         </tbody>
-    </table>
-    <footer th:replace="fragments/footer"></footer>
-</section>
 
+
+</section>
+<footer th:replace="fragments/footer"></footer>
 </body>
+</html>
