--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,4 @@
-<footer><div class="fixed-bottom">
+<footer><div class="fixed-bottom" style="background-color: aliceblue; text-align: center; align-self: center">
     <p>Copyright BCN FemTech2021-Todos los Derechos Reservados</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </div></footer>
