--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,31 +3,13 @@
 <head th:replace="fragments/head"> </head>
 <body>
 <header th:replace="fragments/header"></header>
-<section class="container">
 
+<div th:replace="fragments/carrousel"></div>
+
+<section class="container">
+    <section th:replace="fragments/carrousel"></section>
     <h2>Welcome to our library. </h2>
     <p>Go to the <a href="/books/">Books</a> section or <a href="/books/new">create a new book</a></p>
-    <h1 th:text="${title}"></h1>
-
-
-    <div class="d-flex flex-row flex-sm-wrap justify-content-between align-items-center bd-highlight mb-3">
-
-        <div th:each="book: ${books}" class="card" style="width: 18rem;">
-            <img th:src="${book.coverImage}" class="card-img-top" alt="cover">
-            <div class="card-body">
-                <h5 th:text="${book.title}" class="card-title"></h5>
-            </div>
-            <ul class="list-group list-group-flush">
-                <li th:text="${book.author}" class="list-group-item"></li>
-                <li th:text="${book.category}" class="list-group-item"></li>
-                <li th:text="${book.id}" class="list-group-item" style="display:none;"></li>
-            </ul>
-            <div class="card-body">
-                <a class="btn btn-success btn-sm" th:href="'/books/edit/'+${book.id}">Edit</a>
-                <a class="btn btn-danger btn-sm" th:href="'/books/delete/'+${book.id}">Delete</a>
-            </div>
-        </div>
-    </div>
 
 </section>
 
