--- a/src/main/resources/templates/books/front.html
+++ b/src/main/resources/templates/books/front.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head th:replace="fragments/head"></head>
 <body>
 <header th:replace="fragments/header"></header>
 <section class="container mb-5">
     <h1 th:text="${title}"></h1>
+    <ul class="book-filters" sec:authorize="isAuthenticated()">
+        <li><a href="/books/">All</a></li>
+        <li th:each="category: ${categories}">
+            <a th:href="${'/books?category='+category.name}"
+               th:text="${category.name}">
+            </a>
+        </li>
+    </ul>
 
-
-        <div class="d-flex flex-row flex-sm-wrap justify-content-between align-items-center bd-highlight mb-5">
+    <div class="d-flex flex-row flex-sm-wrap justify-content-between align-items-center bd-highlight mb-5">
 
         <div th:each="book: ${books}" class="card" style="width: 18rem;">
             <img th:src="${book.coverImage}" class="card-img-top" alt="cover">
@@ -19,9 +26,8 @@
                 <li th:text="${book.category}" class="list-group-item"></li>
                 <li th:text="${book.id}" class="list-group-item" style="display:none;"></li>
             </ul>
-            </div>
         </div>
-
+    </div>
 
 
 </section>
