--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,4 @@
-<header>
+<header xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/home">
@@ -10,22 +10,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="http://localhost:8080/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="http://localhost:8020/">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
                         <a class="nav-link" href="/books">Books</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
                         <a class="nav-link" href="/books/new">New</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <form class="d-flex" action="/books/search" method="get">
+                    <input name="word" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
-                <a class="btn btn-primary" href="/login" role="button">LogIn</a>
+                <a class="btn btn-primary" sec:authorize="isAnonymous()" href="/login" role="button">LogIn</a>
 
-                            <form th:action="@{/logout}" method="post">
+                            <form th:action="@{/logout}" sec:authorize="isAuthenticated()" method="post">
                                 <input class="btn btn-warning" type="submit" value="Sign Out"/>
                 </form>
             </div>
